@@ -1,12 +1,16 @@
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+import org.gradle.api.tasks.testing.logging.TestLogEvent
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import java.time.Instant
 
 plugins {
-    `java-library`
+    `kotlin-jvm`()
+    dokka()
     jacoco
     distribution
     `maven-publish`
     signing
-    bintray
+    bintray(includeVersion = false)
 }
 
 repositories {
@@ -15,22 +19,26 @@ repositories {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_10
-    targetCompatibility = JavaVersion.VERSION_1_10
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 group = rootProject.group
 version = "${rootProject.version}.0.0"
 
 dependencies {
-    implementation(project(":chazm-api"))
+    api(project(":chazm-api"))
+
+    implementation(org.jetbrains.kotlin.`kotlin-stdlib-jdk8`)
     implementation(platform(com.google.inject.`guice-bom`))
     implementation(com.google.inject.guice)
     implementation(com.google.inject.extensions.`guice-assistedinject`)
-    implementation("org.slf4j:slf4j-api:+")
-    implementation("javax.inject:javax.inject:1")
-    implementation("javax.validation:validation-api:2.0.1.Final")
+    implementation(org.slf4j.`slf4j-api`)
+    implementation(javax.inject.javax_inject)
+    implementation(javax.validation.`validation-api`)
+    implementation(io.reactivex.rxjava2.rxjava)
 
+    testImplementation(org.jetbrains.kotlin.`kotlin-test-junit5`)
     testImplementation(platform(org.junit.`junit-bom`))
     testImplementation(org.junit.jupiter.`junit-jupiter-api`)
     testImplementation(org.junit.jupiter.`junit-jupiter-params`)
@@ -41,23 +49,16 @@ dependencies {
     testRuntimeOnly(org.junit.jupiter.`junit-jupiter-engine`)
 }
 
-tasks.jar<Jar> {
-    manifest {
-        attributes["Implementation-Title"] = project.name
-        attributes["Implementation-Version"] = project.version
-    }
-}
-
 val sourceJar by tasks.registering(Jar::class) {
     classifier = "sources"
     from(sourceSets.main.get().allJava)
     manifest = tasks.jar.get().manifest
 }
 
-val javadocJar by tasks.registering(Jar::class) {
-    dependsOn(tasks.javadoc)
-    classifier = "javadoc"
-    from(tasks.javadoc.get().destinationDir)
+val dokkaJar by tasks.registering(Jar::class) {
+    dependsOn(tasks.dokka)
+    classifier = "dokka"
+    from(tasks.dokka.get().outputDirectory)
     manifest = tasks.jar.get().manifest
 }
 
@@ -66,7 +67,7 @@ distributions {
         contents {
             from(tasks.jar)
             from(sourceJar)
-            from(javadocJar)
+            from(dokkaJar)
         }
     }
 }
@@ -76,7 +77,7 @@ publishing {
         create<MavenPublication>("mavenJava") {
             artifact(tasks.jar.get())
             artifact(sourceJar.get())
-            artifact(javadocJar.get())
+            artifact(dokkaJar.get())
         }
     }
 }
@@ -104,60 +105,33 @@ bintray {
 }
 
 tasks {
-    val moduleName = "runtimemodels.chazm.model"
-    val junit = "org.junit.jupiter.api"
-
-    compileJava<JavaCompile> {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            options.compilerArgs = listOf("--module-path", classpath.asPath)
-            classpath = files()
+    compileKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
         }
     }
-    compileTestJava<JavaCompile> {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            options.compilerArgs = listOf(
-                    "--module-path", classpath.asPath,
-                    "--add-modules", junit,
-                    "--add-reads", "$moduleName=$junit",
-                    "--patch-module", "$moduleName=" + files(sourceSets.test.get().java.srcDirs).asPath
-            )
-            classpath = files()
+    compileTestKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
         }
     }
-    test<Test> {
+    test {
         useJUnitPlatform()
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            jvmArgs = listOf(
-                    "--module-path", classpath.asPath,
-                    "--add-modules", "ALL-MODULE-PATH",
-                    "--add-reads", "$moduleName=$junit",
-                    "--add-reads", "$moduleName=org.assertj.core",
-                    "--add-opens", "$moduleName/$moduleName=org.junit.platform.commons",
-                    "--add-opens", "$moduleName/$moduleName.entity=org.junit.platform.commons",
-                    "--add-opens", "$moduleName/$moduleName.function=org.junit.platform.commons",
-                    "--add-opens", "$moduleName/$moduleName.parsers=org.junit.platform.commons",
-                    "--add-opens", "$moduleName/$moduleName.parsers=org.mockito",
-                    "--add-opens", "java.base/java.lang=com.google.guice",
-                    "--patch-module", "$moduleName=${files(sourceSets.test.get().java.outputDir).asPath}"
-            )
-            classpath = files()
+        testLogging {
+            events(TestLogEvent.FAILED, TestLogEvent.PASSED, TestLogEvent.SKIPPED)
         }
     }
-    jacocoTestReport<JacocoReport> {
+    jacocoTestReport {
         reports {
             csv.isEnabled = false
             xml.isEnabled = true
             html.isEnabled = System.getenv("CI").isNullOrBlank()
         }
     }
-    javadoc {
-        inputs.property("moduleName", moduleName)
-        val options = options as CoreJavadocOptions
-        doFirst {
-            options.addStringOption("-module-path", classpath.asPath)
+    jar {
+        manifest {
+            attributes["Implementation-Title"] = project.name
+            attributes["Implementation-Version"] = project.version
         }
     }
 }
